Bug 92353 - FileSave: Not confirmed for overwrite a file (unix)
Summary: FileSave: Not confirmed for overwrite a file (unix)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
5.1.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Juergen Funk
URL:
Whiteboard: needsKDE target:5.1.0 target:5.0.0.3
Keywords:
Depends on:
Blocks:
 
Reported: 2015-06-26 13:40 UTC by Juergen Funk
Modified: 2016-09-16 05:54 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Juergen Funk 2015-06-26 13:40:33 UTC
You save a file and close writer, and open writer and give the same name, when you save, then overwite the old one without confirm.
Comment 1 Juergen Funk 2015-06-26 14:05:46 UTC
I have fixed here https://gerrit.libreoffice.org/#/c/16517/
But i think that patch is mandatory for Lo 5.0 too
Comment 2 A (Andy) 2015-06-28 14:52:22 UTC
was for me not reproducible with LO 4.4.3.2, Win 8.1
Comment 3 Katarina Behrens (Inactive) 2015-06-29 13:27:05 UTC
@Andy: this is KDE-specific bug, you need LibreOffice with built-in KDE support on Linux to reproduce the bug
Comment 4 Katarina Behrens (Inactive) 2015-06-29 13:39:55 UTC
Anyway, reproduced with KDE vcl plugin. NOT reproduced with generic plugin (likely also not with gtk[23] plugins, but I don't have those to test)
Comment 5 Commit Notification 2015-06-29 15:21:15 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3e8c14df67a43d3088ed7df0a2b0d96a4bc42d57

tdf#92353 FileSave: Not confirmed for overwrite a file (unix)

It will be available in 5.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Juergen Funk 2015-06-30 06:01:39 UTC
Hi Katarina,

thank you for the commit, but for LHM we need that patch in libreoffice-5.0, too

@Andy under windows it is not reproducible, only under Linux KDE4, and the problem is in LO 4.5 after Date: 23.02.2015
Comment 7 Juergen Funk 2015-07-01 09:44:15 UTC
Cherry-picked to gerrit from master to libreoffice-5-0
https://gerrit.libreoffice.org/16649
Comment 8 Commit Notification 2015-07-03 14:46:40 UTC
Juergen Funk committed a patch related to this issue.
It has been pushed to "libreoffice-5-0":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7fa28a17f658c2bd15a359a5153e77667b925a20&h=libreoffice-5-0

tdf#92353 FileSave: Not confirmed for overwrite a file (unix)

It will be available in 5.0.0.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 9 Xisco Faulí 2016-09-15 22:09:54 UTC
Hello,
Is this bug fixed?
If so, could you please close it as RESOLVED FIXED?
Comment 10 Juergen Funk 2016-09-16 05:53:52 UTC
Hi Xisco Faulí,

the bug is fixed, i do it