tdf#92353 FileSave: Not confirmed for overwrite a file (unix)

The setConfimOverwrite function must be set after setOperationMode function

Change-Id: Id5ab54be502e9c96eba3d7ab600b5e06e241c8fd
Reviewed-on: https://gerrit.libreoffice.org/16517
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Katarina Behrens <Katarina.Behrens@cib.de>