vcl/unx/kde4/KDE4FilePicker.cxx
@@ -129,7 +129,6 @@ KDE4FilePicker::KDE4FilePicker( const uno::Reference<uno::XComponentContext>& )
 #endif
 
     setMultiSelectionMode( false );
-    _dialog->setConfirmOverwrite( true );
 
     // XExecutableDialog functions
     connect( this, SIGNAL( setTitleSignal( const OUString & ) ),
@@ -737,6 +736,7 @@ void SAL_CALL KDE4FilePicker::initialize( const uno::Sequence<uno::Any> &args )
         break;
     case KFileDialog::Saving:
         resId = STR_FPICKER_SAVE;
+        _dialog->setConfirmOverwrite( true );
         break;
     default:
         break;
